--- a/Restaurant Bridge Project/Restaurant Bridge Project.csproj
+++ b/Restaurant Bridge Project/Restaurant Bridge Project.csproj
@@ -266,6 +266,7 @@
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
+    <Content Include="Images\all-one-spaghetti-x_0_0.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
